force-app/main/default/objects/Opportunity/fields/Action_needed__c.field-meta.xml
<CustomField>
    <fullName>Action_needed__c</fullName>
    <description>This is the folder location field.  Renamed to help with Reporting</description>
    <label>Action Needed</label>
    <length>32</length>
    <type>Text</type>
</CustomField>