force-app/main/default/objects/Opportunity/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <formula>Account.AM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM</label>
    <type>Text</type>
</CustomField>