force-app/main/default/objects/Opportunity/fields/AppinPersonPD__c.field-meta.xml
<CustomField>
    <fullName>AppinPersonPD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APPROVED - All PD delivered in person</label>
    <type>Checkbox</type>
</CustomField>