force-app/main/default/objects/Opportunity/fields/Arc_Proposal_ID__c.field-meta.xml
<CustomField>
    <fullName>Arc_Proposal_ID__c</fullName>
    <description>The ARC proposal ID.  Set to start at 200,000 with a no decimal format.</description>
    <displayFormat>{0}</displayFormat>
    <externalId>true</externalId>
    <label>ARC Opportunity ID</label>
    <type>AutoNumber</type>
</CustomField>