force-app/main/default/objects/Opportunity/fields/ARCINVOICENUMBER__c.field-meta.xml
<CustomField>
    <fullName>ARCINVOICENUMBER__c</fullName>
    <label>Invoice Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>