force-app/main/default/objects/Opportunity/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field contains a lookup to account for the purpose of picking a bill to address</description>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>