force-app/main/default/objects/Opportunity/fields/Closed_Lost_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Competitor__c</fullName>
    <label>Closed Lost Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Closed_Lost_Competitor</valueSetName>
    </valueSet>
</CustomField>