force-app/main/default/objects/Opportunity/fields/Commit_Details__c.field-meta.xml
<CustomField>
    <fullName>Commit_Details__c</fullName>
    <label>Commit Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>