force-app/main/default/objects/Opportunity/fields/Commit_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Commit_Requested_Date__c</fullName>
    <label>Commit Requested Date</label>
    <type>Date</type>
</CustomField>