force-app/main/default/objects/Opportunity/fields/COMMITDATE__c.field-meta.xml
<CustomField>
    <fullName>COMMITDATE__c</fullName>
    <label>Commit Approved Date</label>
    <type>Date</type>
</CustomField>