force-app/main/default/objects/Opportunity/fields/ComplexYN__c.field-meta.xml
<CustomField>
    <fullName>ComplexYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ComplexYN</label>
    <type>Checkbox</type>
</CustomField>