force-app/main/default/objects/Opportunity/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <label>Confidence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Firm</fullName>
            </value>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>Possible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>