force-app/main/default/objects/Opportunity/fields/Core_Adoption_Page__c.field-meta.xml
<CustomField>
    <fullName>Core_Adoption_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Adoption Page</label>
    <referenceTo>Core_Adoption__c</referenceTo>
    <relationshipLabel>Linked Opportunities</relationshipLabel>
    <relationshipName>Core_adoption_page</relationshipName>
    <type>Lookup</type>
</CustomField>