force-app/main/default/objects/Opportunity/fields/CRC_Provisioning_Complete__c.field-meta.xml
<CustomField>
    <fullName>CRC_Provisioning_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRC Provisioning Complete</label>
    <type>Checkbox</type>
</CustomField>