force-app/main/default/objects/Opportunity/fields/Created_By_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_User__c</fullName>
    <formula>CreatedBy.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By User</label>
    <type>Text</type>
</CustomField>