force-app/main/default/objects/Opportunity/fields/CRMG_WF__Account__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Account__c</fullName>
    <formula>Account.Name &amp; TEXT(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>