force-app/main/default/objects/Opportunity/fields/CRMG_WF__Activity_Subject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Activity_Subject__c</fullName>
    <label>Activity Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>