force-app/main/default/objects/Opportunity/fields/Date_Interest_Source__c.field-meta.xml
<CustomField>
    <fullName>Date_Interest_Source__c</fullName>
    <description>Renamed from Interestyndate</description>
    <label>Date Interest Source</label>
    <type>Date</type>
</CustomField>