force-app/main/default/objects/Opportunity/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the Account object for the destination address</description>
    <label>Destination</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Destination)</relationshipLabel>
    <relationshipName>Opportunities_destination</relationshipName>
    <type>Lookup</type>
</CustomField>