force-app/main/default/objects/Opportunity/fields/Earliest_Date_To_Ship__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Date_To_Ship__c</fullName>
    <label>Earliest Date to Ship</label>
    <type>Date</type>
</CustomField>