force-app/main/default/objects/Opportunity/fields/ElibrariesProvisioningDone__c.field-meta.xml
<CustomField>
    <fullName>ElibrariesProvisioningDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ElibrariesProvisioningDone</label>
    <type>Checkbox</type>
</CustomField>