force-app/main/default/objects/Opportunity/fields/Exception_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approved_Date__c</fullName>
    <label>Exception Approved Date</label>
    <type>Date</type>
</CustomField>