force-app/main/default/objects/Opportunity/fields/Exception_Notes__c.field-meta.xml
<CustomField>
    <fullName>Exception_Notes__c</fullName>
    <label>Exception Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>