force-app/main/default/objects/Opportunity/fields/Exception_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Exception_Submitted_Date__c</fullName>
    <label>Exception Submitted Date</label>
    <type>Date</type>
</CustomField>