force-app/main/default/objects/Opportunity/fields/Grades_Year_Verified_for_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Grades_Year_Verified_for_Current_Stage__c</fullName>
    <inlineHelpText>Make sure that the &apos;Implementing School Year&apos; and &apos;Implementing Grades&apos; fields are accurate at each pipeline level and updated if necessary.  This field should match the pipeline stage listed in the &apos;Stage&apos; field.</inlineHelpText>
    <label>Grades &amp; Year Verified for Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pipeline_Stages</valueSetName>
    </valueSet>
</CustomField>