force-app/main/default/objects/Opportunity/fields/Grant_Funded__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant Funded</label>
    <type>Checkbox</type>
</CustomField>