force-app/main/default/objects/Opportunity/fields/Grant_Funding_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Grant_Funding_Expiration__c</fullName>
    <label>Grant Funding Expiration</label>
    <type>Date</type>
</CustomField>