force-app/main/default/objects/Opportunity/fields/ICRM_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Account_ID__c</fullName>
    <formula>Account.ICRM_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Infor CRM Accout ID</label>
    <type>Text</type>
</CustomField>