force-app/main/default/objects/Opportunity/fields/ICRM_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>ICRM_Opportunity_ID__c</fullName>
    <label>Infor CRM Opportunity ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>