force-app/main/default/objects/Opportunity/fields/Implementing_Grades__c.field-meta.xml
<CustomField>
    <fullName>Implementing_Grades__c</fullName>
    <inlineHelpText>In which grades will these solutions be used?</inlineHelpText>
    <label>Implementing Grades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade_Levels</valueSetName>
    </valueSet>
</CustomField>