force-app/main/default/objects/Opportunity/fields/Implementing_School_Year__c.field-meta.xml
<CustomField>
    <fullName>Implementing_School_Year__c</fullName>
    <inlineHelpText>What is the first year these solutions will be used?</inlineHelpText>
    <label>Implementing School Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>School_Years</valueSetName>
    </valueSet>
</CustomField>