force-app/main/default/objects/Opportunity/fields/Interest_Source__c.field-meta.xml
<CustomField>
    <fullName>Interest_Source__c</fullName>
    <label>Interest Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory board</fullName>
            </value>
            <value>
                <fullName>ARC summit event</fullName>
            </value>
            <value>
                <fullName>Colloquium</fullName>
            </value>
            <value>
                <fullName>Conference Booth/networking</fullName>
            </value>
            <value>
                <fullName>Ed Reports</fullName>
            </value>
            <value>
                <fullName>Existing relationship</fullName>
            </value>
            <value>
                <fullName>IRLA/ENIL demo</fullName>
            </value>
            <value>
                <fullName>National email blast</fullName>
            </value>
            <value>
                <fullName>Personal email</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Seeing is believing</fullName>
            </value>
            <value>
                <fullName>Territory E-blast</fullName>
            </value>
            <value>
                <fullName>Web lead</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Push In Placeholder</fullName>
                <isActive>false</isActive>
                <label>Push In Placeholder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>