force-app/main/default/objects/Opportunity/fields/Internal_Budget_Code__c.field-meta.xml
<CustomField>
    <fullName>Internal_Budget_Code__c</fullName>
    <description>Renamed from Chargeto since that sounds like an address field</description>
    <label>Internal Budget Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>