force-app/main/default/objects/Opportunity/fields/IsExcludedFromTerritory2Filter__c.field-meta.xml
<CustomField>
    <fullName>IsExcludedFromTerritory2Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from territory filter</label>
    <type>Checkbox</type>
</CustomField>