force-app/main/default/objects/Opportunity/fields/Materials_Timeline_Notes__c.field-meta.xml
<CustomField>
    <fullName>Materials_Timeline_Notes__c</fullName>
    <label>Materials Timeline Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>