force-app/main/default/objects/Opportunity/fields/Month_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Ship__c</fullName>
    <label>Month to Ship</label>
    <length>4</length>
    <type>Text</type>
</CustomField>