force-app/main/default/objects/Opportunity/fields/Month_to_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Ship_Date__c</fullName>
    <formula>DATE(
 VALUE(&apos;20&apos; + LEFT(Month_to_Ship__c, 2)),
 VALUE(RIGHT(Month_to_Ship__c, 2)),
 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month to Ship (Date)</label>
    <type>Date</type>
</CustomField>