force-app/main/default/objects/Opportunity/fields/Must_Be_Received__c.field-meta.xml
<CustomField>
    <fullName>Must_Be_Received__c</fullName>
    <label>Must Be Received</label>
    <type>Date</type>
</CustomField>