force-app/main/default/objects/Opportunity/fields/Operations_Hard_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Operations_Hard_Deadline__c</fullName>
    <label>Operations Hard Deadline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>