force-app/main/default/objects/Opportunity/fields/Opportunity_Parent_Acccount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Parent_Acccount__c</fullName>
    <formula>If(ISBlank(Account.ParentId),  &apos;&apos;  , Account.Parent.Name)</formula>
    <label>Parent Acccount</label>
    <type>Text</type>
</CustomField>