force-app/main/default/objects/Opportunity/fields/PC__c.field-meta.xml
<CustomField>
    <fullName>PC__c</fullName>
    <formula>Account.PC__c</formula>
    <label>PC</label>
    <type>Text</type>
</CustomField>