force-app/main/default/objects/Opportunity/fields/PD__c.field-meta.xml
<CustomField>
    <fullName>PD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to allow DP to alert PD that a proposal is ready for them</description>
    <inlineHelpText>To be checked by DP only</inlineHelpText>
    <label>@PD</label>
    <type>Checkbox</type>
</CustomField>