force-app/main/default/objects/Opportunity/fields/PO_Link__c.field-meta.xml
<CustomField>
    <fullName>PO_Link__c</fullName>
    <description>This is the link to the PO file</description>
    <label>PO Link</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>