force-app/main/default/objects/Opportunity/fields/Pretty_Invoice_YN__c.field-meta.xml
<CustomField>
    <fullName>Pretty_Invoice_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pretty Invoice</label>
    <type>Checkbox</type>
</CustomField>