force-app/main/default/objects/Opportunity/fields/Proforma_Invoice_YN__c.field-meta.xml
<CustomField>
    <fullName>Proforma_Invoice_YN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proforma Invoice</label>
    <type>Checkbox</type>
</CustomField>