force-app/main/default/objects/Opportunity/fields/Prog_Date_On_SO__c.field-meta.xml
<CustomField>
    <fullName>Prog_Date_On_SO__c</fullName>
    <label>Custom Transmittal Expiration Date</label>
    <type>Date</type>
</CustomField>