force-app/main/default/objects/Opportunity/fields/Prog_Date_to_Design__c.field-meta.xml
<CustomField>
    <fullName>Prog_Date_to_Design__c</fullName>
    <label>Date to Design</label>
    <type>Date</type>
</CustomField>