force-app/main/default/objects/Opportunity/fields/Prog_Date_to_OE__c.field-meta.xml
<CustomField>
    <fullName>Prog_Date_to_OE__c</fullName>
    <label>Date to Order Entry</label>
    <type>Date</type>
</CustomField>