force-app/main/default/objects/Opportunity/fields/Prog_details_notes__c.field-meta.xml
<CustomField>
    <fullName>Prog_details_notes__c</fullName>
    <label>Program Detail Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>