force-app/main/default/objects/Opportunity/fields/Prog_Details_Path__c.field-meta.xml
<CustomField>
    <fullName>Prog_Details_Path__c</fullName>
    <label>Custom Transmittal Form Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>