force-app/main/default/objects/Opportunity/fields/Prog_Order_Includes__c.field-meta.xml
<CustomField>
    <fullName>Prog_Order_Includes__c</fullName>
    <label>This Order Includes Custom</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100 BC - (English and/or Spanish)</fullName>
            </value>
            <value>
                <fullName>ARC Core - (English and/or Spanish)</fullName>
            </value>
            <value>
                <fullName>Both 100 BC and ARC Core - (English and/or Spanish)</fullName>
            </value>
            <value>
                <fullName>Specific Core Text Reorder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>