force-app/main/default/objects/Opportunity/fields/Program_Notes__c.field-meta.xml
<CustomField>
    <fullName>Program_Notes__c</fullName>
    <label>Program Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>