force-app/main/default/objects/Opportunity/fields/Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Status__c</fullName>
    <label>Opportunity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed - Won</fullName>
            </value>
            <value>
                <fullName>Closed - Lost</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>RFP Submited/Pending</fullName>
            </value>
            <value>
                <fullName>RFP Won</fullName>
            </value>
            <value>
                <fullName>RFP Lost</fullName>
            </value>
            <value>
                <fullName>RFP In Prcess</fullName>
            </value>
            <value>
                <fullName>RFP Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed-Lost</fullName>
                <isActive>false</isActive>
                <label>Closed-Lost</label>
            </value>
            <value>
                <fullName>Closed-Won</fullName>
                <isActive>false</isActive>
                <label>Closed-Won</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>