force-app/main/default/objects/Opportunity/fields/Receiving_Hours__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Hours__c</fullName>
    <description>Renamed from ICRM Rechours</description>
    <label>Receiving Hours</label>
    <length>64</length>
    <type>Text</type>
</CustomField>