force-app/main/default/objects/Opportunity/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>If( CASESAFEID( RecordTypeId )= &apos;0123h000000tuXJAAY&apos;,&apos;RFP Opportunity&apos;,&apos;Sales Opportunity&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>