force-app/main/default/objects/Opportunity/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <formula>Account.Region_Name__c</formula>
    <label>Region Name</label>
    <type>Text</type>
</CustomField>