force-app/main/default/objects/Opportunity/fields/Regional_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>Regional_Vice_President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Vice President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>RVP_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>