force-app/main/default/objects/Opportunity/fields/Related_Contract__c.field-meta.xml
<CustomField>
    <fullName>Related_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for racking the relation of opportunities to contracts</description>
    <inlineHelpText>This field is used to map Opportunities to contracts</inlineHelpText>
    <label>Related Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunity_Contract_Lookup</relationshipLabel>
    <relationshipName>Opportunity_contract_lookup</relationshipName>
    <type>Lookup</type>
</CustomField>