force-app/main/default/objects/Opportunity/fields/RFP_Additional_Expense__c.field-meta.xml
<CustomField>
    <fullName>RFP_Additional_Expense__c</fullName>
    <label>Additional Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>