force-app/main/default/objects/Opportunity/fields/RFP_Award_Dat__c.field-meta.xml
<CustomField>
    <fullName>RFP_Award_Dat__c</fullName>
    <label>Award Date</label>
    <type>Date</type>
</CustomField>