force-app/main/default/objects/Opportunity/fields/RFP_Awarded_To__c.field-meta.xml
<CustomField>
    <fullName>RFP_Awarded_To__c</fullName>
    <label>Awarded To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>