force-app/main/default/objects/Opportunity/fields/RFP_Discount__c.field-meta.xml
<CustomField>
    <fullName>RFP_Discount__c</fullName>
    <label>Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>