force-app/main/default/objects/Opportunity/fields/RFP_Expiration__c.field-meta.xml
<CustomField>
    <fullName>RFP_Expiration__c</fullName>
    <label>Expiration</label>
    <type>Date</type>
</CustomField>