force-app/main/default/objects/Opportunity/fields/RFP_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>RFP_Labor_Hours__c</fullName>
    <label>Labor Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>