force-app/main/default/objects/Opportunity/fields/RFP_Labor_Rate__c.field-meta.xml
<CustomField>
    <fullName>RFP_Labor_Rate__c</fullName>
    <label>Labor Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>