force-app/main/default/objects/Opportunity/fields/RFP_Potential_Revenue__c.field-meta.xml
<CustomField>
    <fullName>RFP_Potential_Revenue__c</fullName>
    <label>Potential Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>