force-app/main/default/objects/Opportunity/fields/RFP_Reason_for_loss__c.field-meta.xml
<CustomField>
    <fullName>RFP_Reason_for_loss__c</fullName>
    <label>Reason for loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>