force-app/main/default/objects/Opportunity/fields/RFP_Sample_Cost__c.field-meta.xml
<CustomField>
    <fullName>RFP_Sample_Cost__c</fullName>
    <label>Sample Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>