force-app/main/default/objects/Opportunity/fields/RFP_Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>RFP_Shipping_Cost__c</fullName>
    <label>Shipping Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>