force-app/main/default/objects/Opportunity/fields/RFP_Submission_date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Submission_date__c</fullName>
    <label>Submission date</label>
    <type>Date</type>
</CustomField>