force-app/main/default/objects/Opportunity/fields/RFP_Term__c.field-meta.xml
<CustomField>
    <fullName>RFP_Term__c</fullName>
    <label>Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>