force-app/main/default/objects/Opportunity/fields/RFP_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>RFP_Total_Cost__c</fullName>
    <formula>RFP_Total_Labor_Cost__c +  RFP_Sample_Cost__c + RFP_Additional_Expense__c +  RFP_Shipping_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>