force-app/main/default/objects/Opportunity/fields/RFP_Total_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>RFP_Total_Labor_Cost__c</fullName>
    <formula>RFP_Labor_Rate__c *  RFP_Labor_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>