force-app/main/default/objects/Opportunity/fields/RFP_Type__c.field-meta.xml
<CustomField>
    <fullName>RFP_Type__c</fullName>
    <label>RFP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Books</fullName>
            </value>
            <value>
                <fullName>Catalog Materials</fullName>
            </value>
            <value>
                <fullName>Catalog PD</fullName>
            </value>
            <value>
                <fullName>Core Adoption</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>