force-app/main/default/objects/Opportunity/fields/RVP__c.field-meta.xml
<CustomField>
    <fullName>RVP__c</fullName>
    <formula>Account.RVP__c</formula>
    <label>RVP</label>
    <type>Text</type>
</CustomField>