force-app/main/default/objects/Opportunity/fields/Sales_Notes__c.field-meta.xml
<CustomField>
    <fullName>Sales_Notes__c</fullName>
    <label>Sales Notes</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>