force-app/main/default/objects/Opportunity/fields/Sales_Operations__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Operations</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Ops_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>