force-app/main/default/objects/Opportunity/fields/Sales_order_entered__c.field-meta.xml
<CustomField>
    <fullName>Sales_order_entered__c</fullName>
    <label>Sales Order Entered</label>
    <type>Date</type>
</CustomField>