force-app/main/default/objects/Opportunity/fields/Sandbox_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Opportunity_Id__c</fullName>
    <label>Sandbox Opportunity Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>