force-app/main/default/objects/Opportunity/fields/School_Closure__c.field-meta.xml
<CustomField>
    <fullName>School_Closure__c</fullName>
    <description>Renamed from Holidaybreak</description>
    <label>School Closure</label>
    <length>64</length>
    <type>Text</type>
</CustomField>